--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,16 +6,17 @@ authors = ["jiangzhuochi <1053067021@qq.com>"]
 
 [tool.poetry.dependencies]
 python = ">=3.8, <3.10"
-numpy = "^1.21.1"
-pandas = "^1.3.1"
-matplotlib = "^3.4.2"
+numpy = "^1.19.0"
+pandas = "^1.1.1"
+matplotlib = "^3.2.2"
 hmmlearn = "^0.2.6"
 requests = "^2.26.0"
-scipy = "^1.7.1"
+scipy = "^1.6.1"
+# TA-Lib = "^0.4.1" 需要手动安装
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
-black = {version = "^21.7b0", allow-prereleases = true}
+black = { version = "^21.7b0", allow-prereleases = true }
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
