--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ seaborn = "^0.11.2"
 ipykernel = "^6.2.0"
 backtrader = "^1.9.76"
 requests = "^2.26.0"
+APScheduler = "^3.7.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
