🍻 更新数据源

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ backtrader = "^1.9.76"
 requests = "^2.26.0"
 APScheduler = "^3.7.0"
 loguru = "^0.5.3"
+notebook = "^6.5.2"
+rich = "^13.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
